--- a/style.css
+++ b/style.css
@@ -121,6 +121,42 @@ h2 {
   border-radius: 3px;
 }
 
+.carousel-inner {
+  border-radius: 32px;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: inline-block;
+}
+
+.dropdown-menu {
+  right: 5px;
+  background-color: #212121;
+  font-size: 0.85rem;
+  padding: 10px 0px 30px 0px;
+}
+
+.heading {
+  text-align: center;
+  border-bottom: 1px solid green;
+  font-size: 1rem;
+  width: 100%;
+}
+
+.navbar-img {
+  object-fit: contain;
+  width: 100%;
+  padding-top: 41px;
+}
+
+.dropdown-divider {
+  transition: all 0.2s ease-in-out;
+}
+
+.dropdown-item:hover {
+  background: transparent;
+}
+
 /* travel option */
 
 .travel-view-option {
