--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ h2 {
   position: absolute;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   height: 100%;
   left: 0%;
   top: 0%;
@@ -221,20 +222,6 @@ h2 {
   width: 100%;
   background-color: #171717a4;
 }
-/* 
- {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  height: 100%;
-  left: 0%;
-  top: 0%;
-  right: 0%;
-  bottom: 0%;
-  width: 100%;
-  background-color: #171717a4;
-} */
 
 .travel-view-btn a {
   text-decoration: none;
@@ -309,6 +296,7 @@ h2 {
   display: flex;
   opacity: 1;
   overflow: hidden;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   position: absolute;
@@ -338,6 +326,7 @@ h2 {
 .service-box {
   display: flex;
   flex-direction: column;
+  border-radius: 11px;
   gap: 10px;
   width: 22%;
   padding: 10px 20px;
@@ -408,4 +397,222 @@ footer {
 
 .footer-social-icon i {
   color: white;
+}
+
+/* home */
+
+.package-image-container {
+  padding: 30px 0px;
+  background-color: #171717;
+}
+
+.package-image-box {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 90%;
+  margin: auto;
+}
+
+.package-image {
+  position: relative;
+  width: 30%;
+  margin: 30px 0px;
+  border-radius: 21px;
+  transition: all 0.2s ease-in-out;
+}
+
+.package-image:hover {
+  transform: scale(1.04);
+}
+
+.package-image img {
+  object-fit: cover;
+  width: 100%;
+  border-radius: 21px;
+}
+
+.package-discription {
+  width: 90%;
+  padding: 30px 0px;
+  margin: 0px auto;
+}
+
+.diamond {
+  padding: 6px 15px;
+  background-color: #e8f5ee;
+  border-radius: 4px;
+}
+
+.diamond span {
+  color: #0c9a56;
+  font-size: 0.9rem;
+  font-weight: bold;
+  user-select: none;
+}
+
+.diamond i {
+  color: #0c9a56;
+}
+.package-discription h2 {
+  color: #171717;
+  padding: 20px 0px;
+  user-select: none;
+}
+
+.about-hotel {
+  color: orange;
+  display: flex;
+  gap: 10px;
+}
+
+.about-hotel span {
+  color: #9da1b0;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.about-hotel span:hover {
+  text-decoration: underline;
+}
+
+.hotel-discription {
+  margin-top: 30px;
+}
+
+.hotel-discription h3 {
+  font-size: 1.7rem;
+  color: #3c8637;
+  user-select: none;
+}
+
+.line {
+  width: 100px;
+  height: 2px;
+  background-color: #0c9a56;
+}
+
+.discription-start {
+  margin-top: 30px;
+  font-size: 1rem;
+  line-height: 1.8rem;
+  text-align: justify;
+  user-select: none;
+}
+
+.diamond-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.diamond-box-tags {
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+
+.package-overlay {
+  position: absolute;
+  left: 0%;
+  right: 0%;
+  bottom: 0%;
+  top: 0%;
+  border-radius: 21px;
+  background-color: #3333338d;
+  transition: all 0.3s ease-in-out;
+}
+
+.overlay-data {
+  user-select: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  gap: 10px;
+  flex-direction: column;
+}
+
+.overlay-data span {
+  font-weight: bold;
+  font-size: 2rem;
+  color: white;
+  font-family: cursive;
+}
+
+.overlay-data p {
+  font-size: 1.2rem;
+  color: white;
+  font-family: cursive;
+}
+
+.overlay-data img {
+  width: 50px;
+}
+
+.overlay-data .room-type {
+  background-color: #95d4b6;
+  color: #171717;
+  font-size: 0.9rem;
+  font-weight: bold;
+  padding: 6px 15px;
+  border-radius: 4px;
+}
+
+.package-details {
+  width: 90%;
+  margin: auto;
+  padding: 30px 0px;
+}
+
+.package-box {
+  padding: 20px 30px;
+  box-shadow: 0px 0px 13px #e4dada;
+  display: flex;
+  gap: 40px;
+  border-radius: 11px;
+  margin: 40px 0px;
+}
+
+.package-img {
+  width: 30%;
+}
+
+.package-img img {
+  object-fit: cover;
+  width: 100%;
+}
+
+.package-content {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 70%;
+}
+
+.package-days {
+  gap: 4px;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+  font-size: 0.9rem;
+  color: #0c9a56;
+  border-radius: 4px;
+  padding: 6px 15px;
+  background-color: #e8f5ee;
+}
+
+.package-days i {
+  font-size: 1.1rem;
+}
+
+.para {
+  font-size: 0.9rem;
+  margin: 10px 0px;
+}
+
+.para p {
+  margin-bottom: 0px;
 }
