--- a/style.css
+++ b/style.css
@@ -616,3 +616,241 @@ footer {
 .para p {
   margin-bottom: 0px;
 }
+
+/* home page css */
+
+.home-section {
+  background-color: #171717;
+  padding: 20px 0px;
+}
+
+.home-bg-1 {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url(image/carousel/mover-bg-1.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-bg-2 {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url(image/carousel/mover-bg-3.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.home-btn {
+  background-color: orangered;
+  color: white;
+  font-weight: 500;
+  font-size: 1rem;
+  border: none;
+  padding: 8px 15px;
+  transition: all 0.4s ease-in-out;
+}
+
+.home-btn:hover {
+  box-shadow: 0px 0px 13px #171717;
+}
+
+/* book the hotel */
+
+.checkout-hotel {
+  background-color: #333333;
+  margin: 50px auto;
+  width: 90%;
+}
+
+.checkout {
+  padding: 25px 60px;
+}
+
+.check-in {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+
+.check-in p {
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: white;
+}
+
+.check-in-date {
+  outline: none;
+  margin-bottom: 15px;
+  background-color: #86d899;
+  border: none;
+  padding: 10px;
+  color: darkblue;
+}
+
+.hotel-room {
+  display: flex;
+  justify-content: space-between;
+}
+
+.hotel-room h5 {
+  color: white;
+}
+
+.hotel-room div {
+  width: 30%;
+  color: white;
+}
+
+.hotel-room .adult,
+.hotel-room .kids {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.hotel-room-check {
+  display: flex;
+  flex-direction: column;
+}
+
+.hotel-room-check p {
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: white;
+}
+
+.hotel-room-check select {
+  outline: none;
+  margin-bottom: 15px;
+  background-color: #fff;
+  border: none;
+  padding: 10px;
+  color: black;
+}
+
+.hotel-checkout-button {
+  text-align: center;
+  padding: 50px 0px 0px 0px;
+}
+
+.hotel-checkout-button button {
+  background-color: rgb(249, 82, 82);
+  color: white;
+  font-size: 0.9rem;
+  font-weight: bold;
+  outline: none;
+  border: none;
+  padding: 8px 25px;
+}
+
+.check-rates {
+  background-color: #f3f3f3;
+  padding: 50px;
+}
+
+.check-rates-container {
+  width: 90%;
+  margin: auto;
+}
+
+.check-rates-box {
+  height: 150px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  box-shadow: 0px 0px 6px #e1d0d0;
+  padding: 10px 10px;
+  align-items: center;
+  border-radius: 21px;
+}
+
+.check-rates-image {
+  width: 23%;
+  height: 100%;
+}
+
+.check-rates-image img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
+
+.check-rates-cotent {
+  width: 40%;
+}
+
+.check-rates-button {
+  width: 20%;
+}
+
+.check-rates-content a {
+  text-decoration: none;
+}
+
+.check-rates-button button {
+  background-color: rgb(249, 82, 82);
+  color: white;
+  font-size: 0.9rem;
+  font-weight: bold;
+  outline: none;
+  border: none;
+  padding: 8px 25px;
+}
+
+.hotel-location {
+  margin-top: 50px;
+}
+
+.hotel-location h2 {
+  color: #171717;
+}
+
+.map-content {
+  font-size: 0.9rem;
+}
+
+.check-about-hotel {
+  margin-top: 20px;
+}
+
+.check-about-hotel-box {
+  box-shadow: 0px 0px 13px #dfdfdf;
+  padding: 15px;
+  border-radius: 11px;
+  margin-top: 20px;
+}
+
+.check-about-hotel-box h5 {
+  font-size: 1rem;
+}
+
+.check-about-hotel-box p {
+  font-size: 0.93rem;
+  line-height: 2rem;
+}
+
+.check-hotel-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.check-hotel-box h5 {
+  font-size: 0.9rem;
+}
+
+.check-hotel-box li {
+  font-size: 0.8rem;
+}
