--- a/style.css
+++ b/style.css
@@ -693,10 +693,10 @@ footer {
 .check-in-date {
   outline: none;
   margin-bottom: 15px;
-  background-color: #86d899;
+  background-color: #fff;
   border: none;
   padding: 10px;
-  color: darkblue;
+  color: black;
 }
 
 .hotel-room {
@@ -796,8 +796,14 @@ footer {
   width: 20%;
 }
 
+.check-rates-content p {
+  color: black;
+  font-size: 1.2rem;
+}
+
 .check-rates-content a {
   text-decoration: none;
+  font-size: 1rem;
 }
 
 .check-rates-button button {
