--- a/style.css
+++ b/style.css
@@ -997,6 +997,177 @@ footer {
   color: #0c9a56;
 }
 
+/* item */
+
+img {
+  max-width: 100%;
+}
+.carousel-container {
+  width: 1100px;
+  margin: 25px auto;
+  position: relative;
+}
+
+.package-box-button button {
+  padding: 7px 20px;
+  background-color: #95d4b6;
+  font-weight: 500;
+}
+
+.package-box-button button:hover {
+  background-color: #17171794;
+  color: white;
+}
+
+.package-image-overlay {
+  position: absolute;
+  background-color: #000000bd;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  color: white;
+  padding: 20px 0px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.package-one-first {
+  display: flex;
+  justify-content: space-between;
+  width: 86%;
+  margin: auto;
+}
+
+.package-one-first h2 {
+  color: #171717;
+}
+
+@media (max-width: 768px) {
+  .carousel-container {
+    width: 95%;
+  }
+}
+.inner-carousel {
+  width: 100%;
+  overflow: hidden;
+}
+.track {
+  display: inline-flex;
+  transition: transform 0.2s ease-in-out;
+}
+.card-container {
+  width: 275px;
+  flex-shrink: 0;
+  padding-right: 10px;
+}
+
+.card {
+  width: 100%;
+  height: 100%;
+  background-position: center bottom;
+  background-size: center;
+  background-repeat: no-repeat;
+  border-radius: 10px;
+}
+
+.card img {
+  border-radius: 10px;
+}
+
+.nav button {
+  position: absolute;
+  top: 50%;
+  transform: translatey(-50%);
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+.nav .prev {
+  left: -30px;
+  display: none;
+}
+.nav .prev.show {
+  display: block;
+}
+.nav .next {
+  right: -30px;
+}
+.nav .next.hide {
+  display: none;
+}
+
+.your-benifits {
+  width: 86%;
+  margin: auto;
+}
+
+.your-benifits-header h2 {
+  color: #171717;
+}
+
+.your-benifits-body {
+  display: flex;
+  margin-top: 30px;
+}
+
+.your-benifits-container-1 {
+  display: flex;
+  gap: 20px;
+}
+
+.your-benifits-box {
+  width: 30%;
+  border-radius: 11px;
+  border: 1px solid lightgray;
+  box-shadow: 0px 0px 21px #e3c7c7;
+  transition: all 0.3s ease-in-out;
+}
+
+.your-benifits-box:hover {
+  transform: translateY(-10px);
+}
+
+.your-benifits-box-image {
+  border-radius: 11px 11px 0px 0px;
+}
+
+.your-benifits-box-image img {
+  border-radius: 11px 11px 0px 0px;
+}
+
+.your-benifits-box-content {
+  display: flex;
+  flex-direction: column;
+  padding: 15px 20px 0px 20px;
+}
+
+.your-benifits-box-content p {
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+
+.your-benifits-box-content span {
+  color: #2a2828;
+}
+
+.your-benifits-box-content p a {
+  font-size: 0.9rem;
+  font-weight: 400;
+  color: #0c9a56;
+  text-decoration: none;
+}
+
+/* item */
+
+@media (max-width: 768px) {
+  .card-container {
+    width: 184px;
+  }
+}
+
 @media screen and (max-width: 400px) {
   .navbar-brand {
     width: auto;
@@ -1215,5 +1386,17 @@ footer {
   .hotel-location-map {
     width: 98%;
     margin: auto;
+  }
+
+  .package-image-overlay h5 {
+    font-size: 1rem;
+  }
+
+  .package-image-overlay .diamond span {
+    font-size: 0.8rem;
+  }
+
+  .card-container {
+    width: 176px;
   }
 }
