--- a/style.css
+++ b/style.css
@@ -2081,15 +2081,76 @@ textarea::placeholder {
     width: 162px;
     margin-bottom: 20px;
   }
+
+  .contact-us-box {
+    flex-direction: column-reverse;
+  }
+
+  .contact-us-info {
+    width: 100%;
+  }
+
+  .contact-us-form {
+    width: 100%;
+  }
+
+  .submit-btn input {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .navbar-index {
+    flex-direction: row;
+  }
+
+  .navbar-expand-lg .navbar-nav {
+    gap: 12px;
+  }
+
+  .hotel-description-container {
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .hotel-description-content-box {
+    width: 100%;
+  }
+  .hotel-description-content-box h4 {
+    font-weight: 400;
+    font-size: large;
+  }
+
+  .facilities-list {
+    display: flex;
+    flex-direction: column;
+    gap: 11px;
+  }
+
+  .map iframe {
+    width: 100%;
+    height: 100%;
+  }
+
+  .why-us-container {
+    flex-wrap: wrap;
+  }
+
+  .table td {
+    font-size: 0.9rem;
+  }
+
+  .hotel-description-form {
+    width: 100%;
+  }
 }
 
 ::-webkit-scrollbar {
   background-color: #bababa;
-  width: 9px;
+  width: 4px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #73e5ae;
+  background-color: #171717;
   border-radius: 50px;
 }
 
